092_lls/grade.txt
Grading at 11/01/2019:04:02:39.004792
For commit ID 6e1920757080784e428322d5c9d7565bdaf301e7
Grading at Fri Nov  1 00:02:38 EDT 2019
-----------------------------------------------
testcase 1 : Testing with LinkedList<int>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = int]’:
tester.cpp:94:11:   required from here
ll.h:50:7: error: no match for ‘operator~’ (operand type is ‘LinkedList<int>’)
       ~LinkedList();
       ^~~~~~~~~~~~~
ll.h:51:14: error: no match for ‘operator*’ (operand type is ‘LinkedList<int>’)
       this = *temp;
              ^~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with LinkedList<std::string>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = std::__cxx11::basic_string<char>]’:
tester.cpp:94:11:   required from here
ll.h:50:7: error: no match for ‘operator~’ (operand type is ‘LinkedList<std::__cxx11::basic_string<char> >’)
       ~LinkedList();
       ^~~~~~~~~~~~~
In file included from /usr/include/c++/7/ios:42:0,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from tester.cpp:3:
/usr/include/c++/7/bits/ios_base.h:177:3: note: candidate: std::_Ios_Iostate std::operator~(std::_Ios_Iostate)
   operator~(_Ios_Iostate __a)
   ^~~~~~~~
/usr/include/c++/7/bits/ios_base.h:177:3: note:   no known conversion for argument 1 from ‘LinkedList<std::__cxx11::basic_string<char> >’ to ‘std::_Ios_Iostate’
/usr/include/c++/7/bits/ios_base.h:137:3: note: candidate: std::_Ios_Openmode std::operator~(std::_Ios_Openmode)
   operator~(_Ios_Openmode __a)
   ^~~~~~~~
/usr/include/c++/7/bits/ios_base.h:137:3: note:   no known conversion for argument 1 from ‘LinkedList<std::__cxx11::basic_string<char> >’ to ‘std::_Ios_Openmode’
/usr/include/c++/7/bits/ios_base.h:95:3: note: candidate: std::_Ios_Fmtflags std::operator~(std::_Ios_Fmtflags)
   operator~(_Ios_Fmtflags __a)
   ^~~~~~~~
/usr/include/c++/7/bits/ios_base.h:95:3: note:   no known conversion for argument 1 from ‘LinkedList<std::__cxx11::basic_string<char> >’ to ‘std::_Ios_Fmtflags’
In file included from tester.cpp:1:0:
ll.h:51:14: error: no match for ‘operator*’ (operand type is ‘LinkedList<std::__cxx11::basic_string<char> >’)
       this = *temp;
              ^~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with LinkedList<(a custom class we wrote)>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = Tester]’:
tester.cpp:94:11:   required from here
ll.h:50:7: error: no match for ‘operator~’ (operand type is ‘LinkedList<Tester>’)
       ~LinkedList();
       ^~~~~~~~~~~~~
ll.h:51:14: error: no match for ‘operator*’ (operand type is ‘LinkedList<Tester>’)
       this = *temp;
              ^~~~~
The code did not compile.  This test failed.

Overall Grade: F
